added a lasagna image and a description added an unordered list of ingredients added an ordered list of steps finished the lasagna recipes page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,26 @@
 <h1>Lasagna Recipes</h1>
+<img src="lasagna.JPG" alt="Image of the lasagna">
+<h2>Description</h2>
+<p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!
+    Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.
+</p>
+<h3>Ingredients</h3>
+<ul>
+    <li><a href=""><strong>Meat:</strong></a></li>
+    <li><a href=""><strong>Onion and garlic:</strong></a></li>
+    <li><a href=""><strong>Tomato products:</strong></a></li>
+    <li><a href=""><strong>Sugar:</strong></a></li>
+    <li><a href=""><strong>Spices and seasonings:</strong></a></li>
+    <li><a href=""><strong>Lasagna noodles:</strong></a></li>
+    <li><a href=""><strong>Cheeses:</strong></a></li>
+    <li><a href=""><strong>Egg:</strong></a></li>        
+</ul>
+<h4>Steps</h4>
+<ol>
+    <li><a href="#">Make the meat sauce.</a></li>
+    <li><a href="#">Cook the noodles.</a></li>
+    <li><a href="#">Make the ricotta mixture.</a></li>
+    <li><a href="#">Layer the lasagna according to the recipe instructions.</a></li>
+    <li><a href="#">Cover with foil and bake.</a></li>
+    <li><a href="#">Let the lasagna rest before serving.</a></li>
+</ol>
