the index file contain all links to our recipes added a conclusion and a self-reflection in the readme file the conclusion review what I have learned The project ends here

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipes</a></li>
+        <li><a href="recipes/indianchickencurry.html">Indian Chicken Curry Recipes</a></li>
+        <li><a href="recipes/ramen.html">Chicken Stir-Fry with Ramen Recipes</a></li>
+    </ul>
 </body>
 </html>
